ajout de tous mon travail

--- a/index.html
+++ b/index.html
@@ -4,63 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
-    <title>MY WEBSIDE
+    <link rel="stylesheet" href="Styles.css">
+    <title>Mode Femme Africaine</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
-    </title>
 </head>
 <body>
     <header>
-        <div class="principale">
-            <div class="logo">
-            <a href="#">logo<span>T</span></a>
-
-        </div></div>
-        <Ul>
-            
-            <li> <div class="active"></div>
-                <a href="#">Accueil</a>
-            </li>
-        </Ul>
-        <ul>
-            <li>
-                <a href="#">A PROPOS</a>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <a href="#">Contact</a>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <a href="#">Travail</a>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <a href="#">CV</a>
-            </li>
-        </ul>
-    </div>
-    <div class="TITRE">
-        <H1>WELCOME!</H1>
-    </div>
-    <div class="titre">
-        <h1>
-            WELCOME!
-        </h1>
-    </div>
-    <div class="bouton">
-        <a href="#" class="btn"> VISITER</a>
-        <a href="#" class="btn"> DECOUVRIR</a>
-    </div>
-    </header>
+    <div class="principal">
+        <div class="QUEEN">
+            <div class="active">
+            <a href="#">QUEEN<span>BLACK</span></a>
+            <ul>
+                <li>
+                    <a href="#">ACCUEIL</a>
+                </li>
+                <li>
+                    <a href="#">A PROPOS</a>
+                </li>
+                <li>
+                    <a href="#">TRAVAIL</a>
+                </li>
+                <li>
+                    <a href="#">CONTACT</a>
+                </li>
+                <li>
+                    <a href="#">CV</a>
+                </li>
+            </ul>
+</div>
+<div class="titre">
+    <h1>
+        BE ELEGANT!
+    </h1>
+</div>
+<div class="bouton">
+             <a href="#"><div class="btn"></div>VISITER  & ACHETER</a>
     
+</div>
+    </header>
+  <footer>copyright &cap; MATY KANDJI 2022</footer>  
 </body>
 </html>
-<footer>
-    <p>
-        copyright &copy; Maty Kandji 2022 
-    </p>
-</footer>
